--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import '~@ctrl/ngx-emoji-mart/picker'; */
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css"
