--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,154 +58,43 @@
    
       <div *ngIf="homeoptionselected && mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
          <div style=" margin-top: 29px;">
-            <div class="postbox">
-                <div class="row userdetail">
-                  <div class="inneruserdetail">
-                   <span><img [src]="defaultpicurl" class="postsimage"></span>
-                   <span>UserName</span>
-                   <span>.Timestamp</span>
-                   <span>.follow</span>
-                  </div>
+            <div class="postboxmobile" *ngFor="let postdata of sortData()">
+              <div class="row userdetail">
+                <div class="inneruserdetail" style="display: flex;">
+                 <span><img [src]="postdata.profileurl" class="postsimage"></span>
+                 <span style="margin-right: 4px;">{{postdata.username}}</span>
+                 <span *ngIf="!postdata.istodayspost" style="margin-left: 2px;margin-right: 2px;">&#8231; {{postdata.ageofpost}} &#8231;</span>
+                 <span *ngIf="postdata.istodayspost" style="margin-left: 2px;margin-right: 2px;">&#8231; {{postdata.todaypostage}} &#8231;</span>
+            
+                 <span style="margin-left: 2px; color: #009cf6;font-weight: 500;"> Follow</span>
                 </div>
+              </div>
                 <div class="row post">
-                   <img src="../../assets/post1.jpg"/>
+                  <img [src]="postdata.posturl"/>
                 </div>
                 <div class="row likesandcommentmobile">
                   <div class="innerlikesandcommentmobile">
-                    <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-                    <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
-                    <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
-                    <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-                    <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-                    <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
+                    <span (click)="savelikes(postdata.userid,postdata.imagename)" *ngIf="!postdata.liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
+                    <span (click)="dislike(postdata.userid,postdata.imagename)" *ngIf="postdata.liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
+                    <span data-bs-toggle="modal" data-bs-target="#openpostmodalhomepage" (click)="openpostmodal(postdata)"><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
+                    <span ><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
+                    <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;margin-right: -21px" class="fa-regular fa-bookmark menuiconpost"></i></span>
+                    <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;margin-right: -21px" class="fa-solid fa-bookmark menuiconpost"></i></span>
                     
+                  </div>
+                  <p *ngIf="postdata.likes>0" style="margin-top: 10px;font-weight: 600;">{{(postdata.likes)}} likes</p>
+                  <p *ngIf="postdata.likes==0" style="margin-top: 10px;font-weight: 600;">Be the first to like this</p>
+                  <div style="display: flex;height: 23px ">
+                      <p style="margin-top: -4px;font-weight: 600; ">{{postdata?.username}}</p><span style="margin-top: -4px ;margin-left: 10px;max-width:200px;word-wrap:break-word;">{{postdata.postcaption?.substring(0,30)}}</span>
                    </div>
-                   <p>n likes</p>
-                   <p>Captions</p>
-                   <input class="commentinput" type="text" placeholder="Add a comment" />
+                  <p style="margin-left: 10px;max-width:349px;word-wrap:break-word;">{{postdata.postcaption?.length>30?postdata.postcaption.substring(30):""}}</p>
+                  <p style="margin-top: -12px;margin-bottom: 5px;cursor: pointer;color: grey;" *ngIf="postdata?.commentdata?.length>0" data-bs-toggle="modal" data-bs-target="#openpostmodalhomepage" (click)="openpostmodal(postdata)">View all {{postdata?.commentdata?.length}} comments</p>
+                  <div style="border-bottom: 1px solid #e2e2e2;margin-left: 11px;"><textarea class="commentinput" style="border: none;width: 90%;height: 48px;margin-left: -8px "  (keyup)="addcomment()" [(ngModel)]="usercomment" type="text" placeholder="Add a comment..."></textarea>
+                   <span  (click)="postcomment(postdata?.userid,postdata?.imagename)" *ngIf="showpost" style="color: rgb(9 179 255);float: right;font-size: 16px;font-weight: 500;margin-top: 19px;cursor: pointer;">Post</span></div>
                 </div>
                
             </div>
 
-
-            <div class="postbox">
-               <div class="row userdetail">
-                 <div class="inneruserdetail">
-                  <span><i class="fa-solid fa-user menuiconpost"></i></span>
-                  <span>UserName</span>
-                  <span>.Timestamp</span>
-                  <span>.follow</span>
-                 </div>
-               </div>
-               <div class="row post">
-                  <img src="../../assets/post2.jpg"/>
-               </div>
-               <div class="row likesandcomment">
-                 <div class="innerlikesandcomment">
-                   <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-                   <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
-                   <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
-                   <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-                   <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-                   <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
-                   
-                  </div>
-                  <p>n likes</p>
-                  <p>Captions</p>
-                  <input class="commentinput" type="text" placeholder="Add a comment" />
-               </div>
-              
-           </div>
-
-            
-           <div class="postbox">
-            <div class="row userdetail">
-              <div class="inneruserdetail">
-               <span><i class="fa-solid fa-user menuiconpost"></i></span>
-               <span>UserName</span>
-               <span>.Timestamp</span>
-               <span>.follow</span>
-              </div>
-            </div>
-            <div class="row post">
-               <img src="../../assets/post3.jpg"/>
-            </div>
-            <div class="row likesandcomment">
-              <div class="innerlikesandcomment">
-                <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-                <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
-                <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
-                <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-                <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-                <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
-                
-               </div>
-               <p>n likes</p>
-               <p>Captions</p>
-               <input class="commentinput" type="text" placeholder="Add a comment" />
-            </div>
-           
-        </div>
-
-            
-        <div class="postbox">
-         <div class="row userdetail">
-           <div class="inneruserdetail">
-            <span><i class="fa-solid fa-user menuiconpost"></i></span>
-            <span>UserName</span>
-            <span>.Timestamp</span>
-            <span>.follow</span>
-           </div>
-         </div>
-         <div class="row post">
-            <img src="../../assets/post4.jpg"/>
-         </div>
-         <div class="row likesandcomment">
-           <div class="innerlikesandcomment">
-             <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-             <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
-             <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
-             <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-             <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-             <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
-             
-            </div>
-            <p>n likes</p>
-            <p>Captions</p>
-            <input class="commentinput" type="text" placeholder="Add a comment" />
-         </div>
-        
-     </div>
-
-            
-     <div class="postbox">
-      <div class="row userdetail">
-        <div class="inneruserdetail">
-         <span><i class="fa-solid fa-user menuiconpost"></i></span>
-         <span>UserName</span>
-         <span>.Timestamp</span>
-         <span>.follow</span>
-        </div>
-      </div>
-      <div class="row post">
-         <img src="../../assets/post5.jpg"/>
-      </div>
-      <div class="row likesandcomment">
-        <div class="innerlikesandcomment">
-          <span  (click)="like()" *ngIf="!liked"><i  class="fa-regular fa-heart menuiconpost"></i></span>
-          <span (click)="like()" *ngIf="liked"><i class="fa-solid fa-heart menuiconpost" style="color: #ff0000;"></i></span>
-          <span><i style="transform: scaleX(-1);" class="fa-regular fa-comment menuiconpost"></i></span>
-          <span><i style="rotate: 24deg;" class="fa-regular fa-paper-plane menuiconpost"></i></span>
-          <span (click)="bookmark()" *ngIf="!showbookmark"><i style="float: right;" class="fa-regular fa-bookmark menuiconpost"></i></span>
-          <span (click)="bookmark()" *ngIf="showbookmark"><i style="float: right;" class="fa-solid fa-bookmark menuiconpost"></i></span>
-          
-         </div>
-         <p>n likes</p>
-         <p>Captions</p>
-         <input class="commentinput" type="text" placeholder="Add a comment" />
-      </div>
-     
-  </div>
          </div>
       </div>
 
@@ -213,7 +102,7 @@
       <div *ngIf="homeoptionselected && !mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
         <div style=" margin-top: 29px;">
         
-           <div class="postbox" *ngFor="let postdata of sortData()">
+           <div class="postbox" [ngStyle]="{'margin-bottom': postdata.postcaption.length>100?'201px':'126px'}" *ngFor="let postdata of sortData()">
             <div class="row userdetail">
               <div class="inneruserdetail" style="display: flex;">
                <span><img [src]="postdata.profileurl" class="postsimage"></span>
@@ -416,7 +305,7 @@
                      <button class="share" (click)="createpost()" data-bs-dismiss="modal" >Share</button>
                  </div>
                  <div style="margin-top: 22px;">
-                  <input class="captioninput" [(ngModel)]="caption" style="border: none;" type="text" placeholder="Write a caption" />
+                  <textarea class="captioninput" [(ngModel)]="caption" style="border: none;width: 100%;" type="text" placeholder="Write a caption"></textarea>
                  </div>
              </div>
              <div></div>
