code optimised for loading post activity issue

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -319,7 +319,7 @@
 <!-- for responsive navbar menu  -->
 <nav *ngIf="navbarformobile" class="navbar fixed-bottom navbar-expand-lg bg-primary navbar-dark">
    <div class="container-fluid">
-     <div class="navbar-brand" (click)="showhomepage()" ><i class="fa-solid fa-house menuicon"></i></div>
+     <div style="padding-left: 14px;" class="navbar-brand" (click)="showhomepage()" ><i class="fa-solid fa-house menuicon"></i></div>
      <div class="navbar-brand" ><i class="fa-solid fa-magnifying-glass menuicon"></i></div>
      <div class="navbar-brand" > <i class="fa-regular fa-square-plus menuicon"></i></div> 
      <div class="navbar-brand" ><i class="fa-brands fa-facebook-messenger menuicon"></i></div>
